[gd_scene load_steps=6 format=3 uid="uid://irnrm5d64px7"]

[ext_resource type="Script" path="res://level/addActivity/activity_item.gd" id="1_gvadn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvnrv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3y4ep"]
bg_color = Color(1, 1, 1, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ly6lc"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0313726, 0.741176, 0.741176, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5la1"]
bg_color = Color(1, 1, 1, 0)

[node name="ActivityItem" type="Control"]
custom_minimum_size = Vector2(50, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvadn")

[node name="Button" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 22.0
offset_top = 30.0
offset_right = 673.0
offset_bottom = 181.0
mouse_filter = 1
theme_override_styles/hover = SubResource("StyleBoxFlat_mvnrv")
theme_override_styles/normal = SubResource("StyleBoxFlat_3y4ep")

[node name="PanelContainer" type="PanelContainer" parent="Button"]
layout_mode = 2
offset_left = -15.0
offset_right = 659.0
offset_bottom = 175.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ly6lc")

[node name="ColorRect" type="ColorRect" parent="Button/PanelContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Button/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer2" type="MarginContainer" parent="Button/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 115)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Button/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TypeOfActivityPic" type="TextureRect" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActivityName" type="Label" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Activity name is parsed here"

[node name="HBoxContainer" type="HBoxContainer" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MonthLabel" type="Label" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Month"

[node name="DateLabel" type="Label" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Date"

[node name="PanelContainer" type="PanelContainer" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j5la1")

[node name="TimeForActivity" type="Label" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Timestamp
"

[node name="Label2" type="Label" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Activity description:"

[node name="Description" type="RichTextLabel" parent="Button/PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "Activity description is parsed here"
fit_content = true
scroll_active = false
autowrap_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Button"]
custom_minimum_size = Vector2(580, 0)
layout_mode = 0
offset_left = -15.0
offset_right = 692.0
offset_bottom = 205.0
theme_override_constants/margin_bottom = 30

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
